# clickhouse-datafusion

./: .gitignore  .justfile  CHANGELOG.md  CLAUDE.md  CLICKHOUSE_DATAFUSION_COMPLETE_GUIDE.md  CODEBASE_ANALYSIS_REPORT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  cliff.toml  clippy.toml  rustfmt.toml
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  pr.yml  release.yml  security.yml
examples/: 00_summary.rs  01_basic_filtering.rs  02_aggregations.rs  03_joins.rs  04_window_functions.rs  05_federation.rs  06_drop_tables.rs  07_parquet_to_clickhouse.rs  08_parquet_federation.rs  09_write_concurrency.rs  10_large_scale.rs  99_Agent_All_in_one.rs  README.md  basic.rs  run_all.sh
src/: analyzer.rs  builders.rs  catalog_provider.rs  connection.rs  context.rs  dialect.rs  federation.rs  lib.rs  prelude.rs  providers.rs  sink.rs  sql.rs  stream.rs  table_factory.rs  table_provider.rs  udfs.rs  utils.rs
src/analyzer/: function_pushdown.rs  source_context.rs  source_visitor.rs  utils.rs
src/builders/: engine.rs
src/connection/: mock.rs
src/context/: plan_node.rs  planner.rs
src/providers/: catalog.rs  table.rs  table_factory.rs  utils.rs
src/sql/: federation.rs
src/udfs/: analyzer.rs  apply.rs  clickhouse.rs  eval.rs  function.rs  placeholder.rs  plan_node.rs  planner.rs  pushdown.rs
src/utils/: create.rs  errors.rs  params.rs
tests/: e2e.rs  e2e_stress.rs  ext_e2e_tests.rs  federation_e2e.rs
tests/common/: helpers.rs  mod.rs
