[package]
name = "clickhouse-datafusion"
version = "0.1.2"
edition = "2024"
authors = ["George Lee Patterson <patterson.george@gmail.com>"]
description = "High-performance ClickHouse integration for Apache DataFusion with federation support"
license = "Apache-2.0"
keywords = ["clickhouse", "datafusion", "arrow", "database", "performance"]
categories = ["database"]
repository = "https://github.com/georgeleepatterson/clickhouse-datafusion"
homepage = "https://github.com/georgeleepatterson/clickhouse-datafusion"
documentation = "https://docs.rs/clickhouse-datafusion"

[features]
default = []
# Federation through the `datafusion-federation` crate.
federation = ["dep:datafusion-federation"]
# Supports passing additional cloud-specific params during Catalog creation to the underlying client
cloud = ["clickhouse-arrow/cloud"]

# For testing and examples
test-utils = ["clickhouse-arrow/test-utils", "tokio/macros", "tokio/sync"]
mocks = []                                                # Used for unit tests and connection mocking

[dependencies]
async-trait = "0.1"
clickhouse-arrow = { version = "0.1" }
dashmap = "6"
datafusion = "49"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
parking_lot = "0.12"
pin-project = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# --- OPTIONAL ----
# NOTE: There's a current "TODO" to enforce the compatibility fully, but updates seem to lag
# datafusion-table-providers = { version = "0.6", optional = true }

# Note: Using crates.io version for publishing compatibility
# Once PR #135 is merged upstream, we can update this dependency
[dependencies.datafusion-federation]
version = "0.4.9"
features = ["sql"]
optional = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Detects large stack-allocated futures that may cause stack overflow crashes (see threshold in clippy.toml)
large_futures = "warn"
clone_on_ref_ptr = "warn"
must_use_candidate = "allow"

[lints.rust]
unused_imports = "deny"
elided_lifetimes_in_paths = "deny"
explicit_outlives_requirements = "warn"
let_underscore_drop = "warn"
missing_copy_implementations = "warn"
redundant_lifetimes = "warn"
rust_2024_incompatible_pat = "warn"
single_use_lifetimes = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_crate_dependencies = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_results = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[profile.release-with-debug]
inherits = "release"
debug = "full"

[profile.release-lto]
inherits = "release"
lto = true
opt-level = 3
codegen-units = 1

[profile.instruments]
inherits = "release"
debug = "full"
lto = "off"
codegen-units = 16       # default
opt-level = 2
debug-assertions = false
incremental = false

[profile.release-with-debug.package."*"]
debug = "full"

[profile.instruments.package."*"]
debug = "full"

[profile.ci]
inherits = "dev"
incremental = false

# ci turns off debug info, etc. for dependencies to allow for smaller binaries making caching more effective
[profile.ci.package."*"]
debug = false
debug-assertions = false
strip = "debuginfo"
incremental = false

# EXAMPLES

[[example]]
name = "basic"
required-features = ["test-utils"]

# INTEGRATION TESTS

[[test]]
name = "e2e"
required-features = ["test-utils"]
